# LowFile

./: LICENSE  README.md  Readme.md  input.json
Hackathon/Low-File/low_file_contract/app/: Cargo.toml
Hackathon/Low-File/low_file_contract/app/src/: lib.rs
Hackathon/Low-File/low_file_contract/app/src/services/: low_file_service.rs  mod.rs
Hackathon/Low-File/low_file_contract/app/src/states/: low_file_state.rs  mod.rs  wasm.opt.wasm
Hackathon/Low-File/low_file_contract/very/: lib.rs
Hackathon/Low-File/low_file_contract/wasm/: .binpath  app.idl  app_client.rs  build.rs
Hackathon/Low-File/low_file_contract/wasm/src/: wasm.opt.wasm
Hackathon/Low-File/traffic_light_frontend/src/app/: consts.ts
Hackathon/Low-File/traffic_light_frontend/src/components/: index.ts
Hackathon/Low-File/traffic_light_frontend/src/components/LowFileComponents/: App.tsx  UserProfile.tsx  index.ts
Hackathon/Low-File/traffic_light_frontend/src/pages/home/: home.tsx
Hackathon/Low-File/zkp/app/: zkp.rs
